@@ -532,9 +532,7 @@
   ***   at top-level: modreverse(Mod(-x^3+
   ***                 ^--------------------
   *** modreverse: domain error in modreverse: deg(minpoly(z)) < 4
-  ***   at top-level: rnfnormgroup(bnrinit
-  ***                 ^--------------------
-  *** rnfnormgroup: domain error in rnfnormgroup: rnfisabelian(bnr,pol) = 0
+[;]
   ***   at top-level: concat([1,2],[3,4]~)
   ***                 ^--------------------
   *** concat: inconsistent concatenation t_VEC (2 elts) , t_COL (2 elts).
@@ -587,4 +585,4 @@ INFINITY
   ***   at top-level: trap(e_INV,INFINITY,log(0))
   ***                                     ^-------
   *** log: domain error in log: argument = 0
-Total time spent: 20
+Total time spent: 16
