@@ -43,3 +43,6 @@ do(y^4 - 34*y^2 + 1189, 5, matdiagonal([3,1,1]))
 
 do(y, [36,[1]], matdiagonal([3,1]), 3)
 
+K=bnrinit(bnfinit(y^4-y^3+16*y^2-16*y+61),[89,9,52,85;0,1,0,0;0,0,1,0;0,0,0,1],1);
+rnfkummer(K,,5)
+
