@@ -40,3 +40,7 @@ BA 12- GP functions bnrisgalois, bnrgaloismatrix, bnrgaloisapply
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
 BA  2- [libpari] rename RgX_mullow -> RgXn_mul, RgX_sqrlow -> RgXn_sqr,
     RgX_modXn_eval -> RgXn_eval, RgX_modXn_shallow-> RgXn_red_shallow
+    3- change rnfnormgroup to return [;] instead of raising an error whenever
+    it detects a problem (modulus not a multiple of the conductor, non-abelian
+    extension...): this is a BIB with undefined result, but returning a
+    sentinel is more useful *if* we notice it.
